--- a/index.html
+++ b/index.html
@@ -1,58 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="./favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-6ee78ba2.css">
-	<link rel="modulepreload" href="/_app/start-c0ce7a51.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-e3d44bcd.js">
-	<link rel="modulepreload" href="/_app/layout.svelte-855ca937.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-9ba120e0.js">
-	</head>
-	<body>
-		<div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="" />
+    <link rel="icon" href="./favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="content-security-policy" content="" />
+    <link
+      rel="stylesheet"
+      href="/_app/assets/pages/index.svelte-6ee78ba2.css"
+    />
+    <link rel="modulepreload" href="../_app/start-c0ce7a51.js" />
+    <link rel="modulepreload" href="../_app/chunks/vendor-e3d44bcd.js" />
+    <link rel="modulepreload" href="../_app/layout.svelte-855ca937.js" />
+    <link rel="modulepreload" href="../_app/pages/index.svelte-9ba120e0.js" />
+  </head>
+  <body>
+    <div>
+      <div class="container svelte-1jusx9o">
+        <header class="svelte-1jusx9o"><h1>Wordle</h1></header>
+        <div class="guessess svelte-1jusx9o">
+          <div class="row svelte-1jusx9o">
+            <div class="input-box svelte-19xooft">
+              <input type="text" class="svelte-19xooft" value="" />
+            </div>
+            <div class="input-box svelte-19xooft">
+              <input type="text" class="svelte-19xooft" value="" />
+            </div>
+            <div class="input-box svelte-19xooft">
+              <input type="text" class="svelte-19xooft" value="" />
+            </div>
+            <div class="input-box svelte-19xooft">
+              <input type="text" class="svelte-19xooft" value="" />
+            </div>
+            <div class="input-box svelte-19xooft">
+              <input type="text" class="svelte-19xooft" value="" />
+            </div>
+          </div>
+          <div class="row svelte-1jusx9o">
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+          </div>
+          <div class="row svelte-1jusx9o">
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+          </div>
+          <div class="row svelte-1jusx9o">
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+          </div>
+          <div class="row svelte-1jusx9o">
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+            <div class="input-box svelte-6coww2"></div>
+          </div>
+        </div>
+        <button value="Submit" name="Submit" class="svelte-1jusx9o">
+          Submit
+        </button>
+      </div>
 
-
-<div class="container svelte-1jusx9o"><header class="svelte-1jusx9o"><h1>Wordle</h1></header>
-	<div class="guessess svelte-1jusx9o"><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div>
-					
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div></div>
-	<button value="Submit" name="Submit" class="svelte-1jusx9o">Submit</button>
-</div>
-
-
-		<script type="module" data-hydrate="i0h46c">
-		import { start } from "/_app/start-c0ce7a51.js";
-		start({
-			target: document.querySelector('[data-hydrate="i0h46c"]').parentNode,
-			paths: {"base":"","assets":""},
-			session: {},
-			route: true,
-			spa: false,
-			trailing_slash: "never",
-			hydrate: {
-				status: 200,
-				error: null,
-				nodes: [
-					import("/_app/layout.svelte-855ca937.js"),
-						import("/_app/pages/index.svelte-9ba120e0.js")
-				],
-				url: new URL("http://sveltekit-prerender/"),
-				params: {}
-			}
-		});
-	</script></div>
-	</body>
+      <script type="module" data-hydrate="i0h46c">
+        import { start } from '/_app/start-c0ce7a51.js';
+        start({
+          target: document.querySelector('[data-hydrate="i0h46c"]').parentNode,
+          paths: { base: '', assets: '' },
+          session: {},
+          route: true,
+          spa: false,
+          trailing_slash: 'never',
+          hydrate: {
+            status: 200,
+            error: null,
+            nodes: [
+              import('/_app/layout.svelte-855ca937.js'),
+              import('/_app/pages/index.svelte-9ba120e0.js'),
+            ],
+            url: new URL('http://sveltekit-prerender/'),
+            params: {},
+          },
+        });
+      </script>
+    </div>
+  </body>
 </html>
