try to fix domain probelms (second try)

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <meta http-equiv="content-security-policy" content="" />
     <link
       rel="stylesheet"
-      href="/_app/assets/pages/index.svelte-6ee78ba2.css"
+      href="/wordle/_app/assets/pages/index.svelte-6ee78ba2.css"
     />
-    <link rel="modulepreload" href="../_app/start-c0ce7a51.js" />
-    <link rel="modulepreload" href="../_app/chunks/vendor-e3d44bcd.js" />
-    <link rel="modulepreload" href="../_app/layout.svelte-855ca937.js" />
-    <link rel="modulepreload" href="../_app/pages/index.svelte-9ba120e0.js" />
+    <link rel="modulepreload" href="/wordle/_app/start-c0ce7a51.js" />
+    <link rel="modulepreload" href="/wordle/_app/chunks/vendor-e3d44bcd.js" />
+    <link rel="modulepreload" href="/wordle/_app/layout.svelte-855ca937.js" />
+    <link
+      rel="modulepreload"
+      href="/wordle/_app/pages/index.svelte-9ba120e0.js"
+    />
   </head>
   <body>
     <div>
