--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/wordle/_app/assets/pages/index.svelte-6ee78ba2.css">
-	<link rel="modulepreload" href="/wordle/_app/start-05a1391b.js">
-	<link rel="modulepreload" href="/wordle/_app/chunks/vendor-e3d44bcd.js">
-	<link rel="modulepreload" href="/wordle/_app/layout.svelte-48620d5a.js">
-	<link rel="modulepreload" href="/wordle/_app/pages/index.svelte-aeaedb46.js">
+	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-6ee78ba2.css">
+	<link rel="modulepreload" href="/_app/start-715ac4c5.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-e3d44bcd.js">
+	<link rel="modulepreload" href="/_app/layout.svelte-48620d5a.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-aeaedb46.js">
 	</head>
 	<body>
 		<div>
@@ -34,7 +34,7 @@
 
 
 		<script type="module" data-hydrate="i0h46c">
-		import { start } from "/_app/start-05a1391b.js";
+		import { start } from "/_app/start-715ac4c5.js";
 		start({
 			target: document.querySelector('[data-hydrate="i0h46c"]').parentNode,
 			paths: {"base":"","assets":""},
