--- a/index.html
+++ b/index.html
@@ -6,37 +6,31 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-6ee78ba2.css">
-	<link rel="modulepreload" href="/_app/start-715ac4c5.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-e3d44bcd.js">
-	<link rel="modulepreload" href="/_app/layout.svelte-48620d5a.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-aeaedb46.js">
+	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-3716391d.css">
+	<link rel="modulepreload" href="/_app/start-8ccb0d72.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-e519bf7f.js">
+	<link rel="modulepreload" href="/_app/layout.svelte-c7491c20.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-06104283.js">
 	</head>
 	<body>
 		<div>
 
 
 <div class="container svelte-1jusx9o"><header class="svelte-1jusx9o"><h1>Wordle</h1></header>
-	<div class="guessess svelte-1jusx9o"><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value="">
-</div>
-					
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
-			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div><div class="input-box svelte-6coww2"></div>
+	<div class="guessess svelte-1jusx9o"><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value=""></div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value=""></div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value=""></div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value=""></div><div class="input-box svelte-19xooft"><input type="text" class="svelte-19xooft" value=""></div>
+			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div>
+			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div>
+			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div>
+			</div><div class="row svelte-1jusx9o"><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div><div class="input-box svelte-19xooft"><span></span></div>
 			</div></div>
 	<button value="Submit" name="Submit" class="svelte-1jusx9o">Submit</button>
 </div>
 
 
-		<script type="module" data-hydrate="i0h46c">
-		import { start } from "/_app/start-715ac4c5.js";
+		<script type="module" data-hydrate="1ipcxd9">
+		import { start } from "/_app/start-8ccb0d72.js";
 		start({
-			target: document.querySelector('[data-hydrate="i0h46c"]').parentNode,
+			target: document.querySelector('[data-hydrate="1ipcxd9"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -46,8 +40,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/layout.svelte-48620d5a.js"),
-						import("/_app/pages/index.svelte-aeaedb46.js")
+					import("/_app/layout.svelte-c7491c20.js"),
+						import("/_app/pages/index.svelte-06104283.js")
 				],
 				url: new URL("http://sveltekit-prerender/"),
 				params: {}
